Fix invite code alignment and copy icon shadow

--- a/src/views/invites/components/invite_display/_inviteDisplay.scss
+++ b/src/views/invites/components/invite_display/_inviteDisplay.scss
@@ -15,7 +15,7 @@
       // .code is skewed because of .delete
       &:nth-child(1) {
         padding-left: 35px;
-        flex: 1.3;
+        flex: 1.5;
       }
     }
   }
@@ -109,7 +109,7 @@
 
 .code {
   padding-left: 35px;
-  flex: 1.3;
+  flex: 1.5;
 }
 
 
@@ -119,7 +119,7 @@
   top: 0px;
   right: -7px;
   font-size: 1.7em;
-  text-shadow: 1px 1px 0 black, 1px 0 0 black, 0 1px 0 black;
+  text-shadow: 1px 1px 1px black, 1px 0 1px black, 0 1px 1px black, 3px 3px 1px black;
   user-select: none;
   cursor: pointer;
   transition: color .2s ease;
@@ -129,5 +129,6 @@
   &:active {
     top: 1px;
     right: -10px;
+    text-shadow: none;
   }
 }
